--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,4 +1,4 @@
-.header .row {
+.row {
   height: 70px;
   width: 100%;
   align-items: center;
@@ -9,6 +9,9 @@
   top: 0px;
   padding: 0px 0px;
   margin: 0px 0px;
+  border-bottom: 1px solid  #f2f5f9;
+ box-shadow: 0 0 0 0 transparent,
+  0 0.375rem 0.625rem -0.3125rem #f2f5f9 ;
 }
 .container-fluid{
   padding-left: 0px;
