--- a/src/components/styles/Modal.css
+++ b/src/components/styles/Modal.css
@@ -25,11 +25,11 @@
   color: #fe696a;
   padding-bottom: 12px;
 }
-.modalHeacer__lockIcon {
+.modalHeader__lockIcon {
   margin-bottom: 5px;
 }
 
-.modalHeacer__personIcon {
+.modalHeader__personIcon {
   margin-bottom: 5px;
 }
 
@@ -44,89 +44,3 @@
   cursor: pointer;
   color: #fe696a;
 }
-
-#checkbox-rememberMe {
-  color: #fe696a;
-}
-
-/* The customcheck */
-.customcheck {
-  display: block;
-  position: relative;
-  padding-left: 20px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 14px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default checkbox */
-.customcheck input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-}
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 5px;
-  left: 0;
-  height: 13px;
-  width: 13px;
-  background-color: none;
-  border-radius: 2px;
-  border: 1px solid #ced4da;
-}
-
-/* When the checkbox is checked, add a blue background */
-.customcheck input:checked ~ .checkmark {
-  background-color: #fe696a;
-  border: 1px solid #fe696a;
-  border-radius: 2px;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.customcheck input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.customcheck .checkmark:after {
-  left: 3px;
-  top: -1px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.forgotPassword {
-  font-size: 12px;
-}
-
-.modalBody__rememberMe-forgotPassword {
-  justify-content: flex-end;
-  display: grid;
-}
-/* 
-.btn-primary.btn-shadow {
-  height: 45px;
-  border: #fe696a;
-  background-color: rgba(254, 105, 106);
-  box-shadow: 0 0.5rem 1.125rem -0.5rem rgba(254, 105, 106);
-}
- */
