--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,12 +1,42 @@
 // Override default variables before the import
+
 $primary: #fe696a;
-$primaryOp :unquote($primary+ "4d" );
+$primaryOp: unquote($primary + "4d");
+
 // Import Bootstrap and its default variables
+
 @import "~bootstrap/scss/bootstrap.scss";
 .form-control {
   &:focus {
-    border-color: $primaryOp ;
-    box-shadow: 0 0 0 0 transparent,
-      0 0.375rem 0.625rem -0.3125rem $primaryOp;
+    border-color: $primaryOp;
+    box-shadow: 0 0 0 0 transparent, 0 0.375rem 0.625rem -0.3125rem $primaryOp;
+  }
+}
+
+.form-check-input {
+  &:focus {
+    outline-color: $primary;
+  }
+  //doesn't work
+  &:checked {
+    color: $primary;
+  }
+}
+a {
+  &:hover {
+    text-decoration: none;
+  }
+}
+.password-icon {
+  &:hover {
+    cursor: pointer;
+    color: red;
+  }
+}
+.password-icon {
+  @if (password-input: active) == true {
+    color: blue;
+    border-color: $primaryOp;
+    box-shadow: 0 0 0 0 transparent, 0 0.375rem 0.625rem -0.3125rem $primaryOp;
   }
 }
