--- a/src/custom.scss
+++ b/src/custom.scss
@@ -27,16 +27,15 @@ a {
     text-decoration: none;
   }
 }
-.password-icon {
+.password-icon,
+.cursor__pointer {
   &:hover {
     cursor: pointer;
     color: red;
   }
 }
-.password-icon {
-  @if (password-input: active) == true {
-    color: blue;
-    border-color: $primaryOp;
-    box-shadow: 0 0 0 0 transparent, 0 0.375rem 0.625rem -0.3125rem $primaryOp;
+.close {
+  &:focus {
+    outline: none;
   }
 }
