--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,7 +1,9 @@
 // Override default variables before the import
 
 $primary: #fe696a;
-$iconColor: #4a576a;
+$secondary: #373f50;
+$backgraundColor: #f2f5f9;
+
 $primaryOp: unquote($primary + "4d");
 
 // Import Bootstrap and its default variables
@@ -15,17 +17,21 @@ $primaryOp: unquote($primary + "4d");
   }
 }
 
+header {
+  background-color: white;
+}
+
 .form-check-input {
   &:focus {
     outline-color: $primary;
   }
 }
 a {
-  color: $iconColor;
+  color: $secondary;
   &:hover {
     cursor: pointer;
     text-decoration: none;
-    color: $iconColor;
+    color: $secondary;
   }
 }
 .link {
@@ -64,4 +70,46 @@ a {
   position: absolute;
   top: 0;
   right: 2px;
+}
+main,
+.breadcrumb {
+  background-color: $backgraundColor;
+  padding: 10px 10px;
+}
+h1 {
+  font-size: 32px;
+  font-weight: bold;
+  color: $secondary;
+}
+h2 {
+  font-size: 20px;
+  font-weight: bold;
+  color: $secondary;
+}
+.cityImage {
+  width: 50px;
+  height: 50px;
+}
+
+.btn-light {
+  background-color: white;
+  box-shadow: 0 0 0 0 transparent, 0 0.375rem 0.625rem -0.3125rem $secondary;
+  &:hover {
+    background-color: white;
+    box-shadow: none;
+    border: white;
+  }
+  .truck-icon {
+    padding-bottom: 2px;
+    padding-right: 2px;
+  }
+}
+.breadcrumb-item a {
+  color: $secondary;
+  &:hover {
+    color: none;
+  }
+}
+.onPage a {
+  color: unquote($secondary + "8d");
 }
