--- a/src/custom.scss
+++ b/src/custom.scss
@@ -16,6 +16,12 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+article,
+section,
+ul {
+  margin: 0px;
+  padding: 0px;
+}
 
 .form-control {
   &:focus {
@@ -155,6 +161,6 @@ h6 {
   padding: 0;
   width: 100%;
   z-index: 10;
-  height: 35px;
+  height: 30px;
   cursor: pointer;
 }
